# ERP-Project

./: .gitignore  docker-compose.yml
AI-service/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  app.py  boto3_test.py  graphs.py  models.py  nodes.py  prompts.py  pyproject.toml  requirements.txt  research.ipynb  teste.txt  utils.py
Backend/: .dockerignore
Backend/Inventory-MS/: pom.xml
Backend/Invoice-MS/: .gitignore  Dockerfile  docker-compose.yml  pom.xml
Backend/Invoice-MS/src/main/java/com/ERP/Invoice_MS/: InvoiceMsApplication.java
Backend/Invoice-MS/src/main/java/com/ERP/Invoice_MS/config/: AwsConfig.java
Backend/Invoice-MS/src/main/resources/: application.properties
Backend/Invoice-MS/src/main/resources/static/: dashboard.html  erp.css  file-upload.html  forecast-dashboard.html  invoice-form.html  invoice.html  login.html  settings.html
Backend/Invoice-MS/src/main/resources/templates/: invoice-form.html  invoice.css  invoice.html
Backend/Invoice-MS/src/test/java/com/ERP/Invoice_MS/: InvoiceEntityMsApplicationTests.java  InvoiceMsApplicationTests.java
Inventory-MS/src/main/java/org/ERP/Inventory/: InventoryApplication.java
Invoice-MS/src/main/java/com/ERP/Invoice_MS/: InvoiceMsApplication.java
ML-service/: .gitignore  data_reduction.ipynb  data_transformation.ipynb  datasets.ipynb  model_training.ipynb  pyproject.toml
ML-service/airflow/: .env.example  Dockerfile  docker-compose.yaml  requirements.txt
ML-service/airflow/config/: airflow.cfg
ML-service/airflow/dags/: sales_elt.py  sales_forecast_dag.py  sales_train_dag.py  sales_transform_dag.py  store_forecast_dag.py  store_train_dag.py  store_transform_dag.py
ML-service/airflow/dags/src/: data_preprocessing.py  data_transformation.py  model_factory.py  model_promotion.py  model_tuning.py  orchestrator.py  utility.py
ML-service/mlflow/docker-compose/: .env.example  docker-compose.yml
ML-service/model_service/: .env.example  Dockerfile  analytics.py  main.py  requirements.txt  utils.py
(+21 files in other folders)
